--- a/.github/workflows/init_repository.yml
+++ b/.github/workflows/init_repository.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '6.0.x'
-      - working-directory: /tmp/tmp4tfhsz2l/pluto-templates/applications/web_app/rest/dotnet/
+          working-directory: /rest_dotnet
       - run: dotnet new webapi -minimal -o rest
       
       - name: Remove initialization workflow
